force-app/main/default/objects/FEC_Field_Deploy_Event__e/FEC_Field_Deploy_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event to notify LWC about field deploy results in real-time</description>
    <label>Field Deploy Event</label>
    <pluralLabel>Field Deploy Events</pluralLabel>
</CustomObject>