force-app/main/default/objects/FEC_Field_Deploy_Event__e/fields/FEC_Deploy_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Deploy_Status__c</fullName>
    <description>Success or Failed</description>
    <label>Deploy Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>