force-app/main/default/objects/FEC_Field_Deploy_Event__e/fields/FEC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Message__c</fullName>
    <description>Error message if deploy failed</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>