force-app/main/default/objects/FEC_Field_Deploy_Event__e/fields/FEC_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_API_Name__c</fullName>
    <description>Field API name that was deployed</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>