force-app/main/default/objects/FEC_Field_Deploy_Event__e/fields/FEC_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Request_Id__c</fullName>
    <description>ID of FEC_Field_Deploy_Request__c</description>
    <label>Request Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>