force-app/main/default/objects/FEC_Field_Deploy_Event__e/fields/FEC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>FEC_Target_Object__c</fullName>
    <description>Target object name</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>